[package]
name = "icekcd"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["cargo", "derive"] }
dirs = "6.0.0"
ego-tree = "0.10.0"
env_logger = "0.11.8"
iced = { git = "https://github.com/iced-rs/iced", branch = "master", version = "0.15.0-dev", features = ["image"] }
iced_selection = { git ="https://git.sr.ht/~pml68/iced_selection" }
iced_split = { git = "https://github.com/edwloef/iced_split", version = "0.2.0-dev" }
image = { version = "0.25.9", default-features = false }
isahc = "1.7.2"
log = "0.4.29"
lucide-icons = "*"
open = "5.3.3"
rand = "0.10.0"
scraper = "0.25.0"
serde = "1.0.228"
serde-inline-default = "1.0.1"
serde_json = "1.0.149"
smol = "2.0.2"
toml = "1.0.3"
yanet = { git = "https://github.com/janTatesa/yanet", version = "0.1.0" }

[features]
debug = ["iced/debug"]

[patch.crates-io]
iced_core = {git = "https://github.com/iced-rs/iced", branch = "master"}
